2013-02-28  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixKey.c (TkpGetKeySym): [Bug 3599312]: Put the
	initialization of the key mapping before the input method handling so
	that Alt key handling is correct on non-OSX Unix. Thanks to Colin
	McDonald for developing the fix.

2013-01-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in:  Don't compile Tk with -DTCL_NO_DEPRECATED by
	* unix/Makefile.in: default any more, it might hurt when we compile Tk
	8.x against Tcl 8.y with y > x, because new deprecated constructs
	might be added in higher Tcl versions (except for Tk 8.6, for now,
	because there is no higher 8.x yet).

2013-01-14  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:	 More flexible search for win32 tclConfig.sh,
	* win/configure: backported from TEA.

2012-12-03  François Vogel  <fvogelnew1@free.fr>

	* generic/tkTextIndex.c: [Bug 3588824]: bug in image index handling
	* tests/textIndex.test:  for weird image names

2012-11-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinTest.c: [Bug 3585396]: winDialog.test requires user
	* tests/winDialog.test: interaction. Renumber test-cases as in Tk 8.6,
	and convert various to tcltest-2 style.

2012-11-09  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.13 TAGGED FOR RELEASE ***

	* generic/tk.h:		Bump to 8.5.13 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

2012-11-07  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFocus.c (TkSetFocusWin): [Bug 3574708]: Move window
	liveness into this function from caller sites to ensure that there are
	no paths where things can trip up on setting the focus to a partially
	dead window.

2012-10-24  Don Porter  <dgp@users.sourceforge.net>

	* macosx/tkMacOSXWm.c:	[Bug 3574893] Add overlooked toplevel ref
	count maintenance in the [wm manage|forget] operations that could
	cause segfaults due to premature free of structs.
